--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "dateformat": "^4.6.3",
     "font-awesome": "4.7.0",
     "prop-types": "15.6.0",
-    "react": "^16.3.2",
+    "react": "^16.14.0",
     "react-animation-components": "3.0.0",
     "react-dom": "^16.3.2",
     "react-popper": "0.9.2",
-    "react-redux": "5.0.7",
+    "react-redux": "^5.1.2",
     "react-redux-form": "1.16.8",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
